feat: add class form submit

--- a/index.html
+++ b/index.html
@@ -11,55 +11,104 @@
     <title>Document</title>
   </head>
   <body>
+    <div id="modal" class="modal hidden">
+      <div class="modal-content">
+        <span class="close-button">&times;</span>
+        <h2>Tambah Kontak Baru</h2>
+        <form id="form-address">
+          <label for="name">Nama:</label>
+          <input
+            type="text"
+            id="name"
+            name="name"
+            class="input-field"
+            required
+          />
+          <label for="phone">Nomor Telepon:</label>
+          <input
+            type="text"
+            id="phone"
+            name="phone"
+            class="input-field"
+            required
+          />
+          <button type="submit" class="button-submit">Simpan</button>
+        </form>
+      </div>
+    </div>
     <header class="navbar_container">
       <div class="navbar">GetContacts</div>
     </header>
     <section class="section_container" id="main">
-        <div class="main-contact">
-          <div class="sidebar">
-            <p class="sidebar_button">Create new contact</p>
-            <div class="sidebar-category">
-                <h1 class="heading-category">General</h1>
-                <p>All Contact</p>
-                <p>Trash</p>
-            </div>
-            <div class="sidebar-category">
-                <h1 class="heading-category">Label</h1>
-                <p>Personal</p>
-                <p>Work</p>
-            </div>
+      <div class="main-contact">
+        <div class="sidebar">
+          <p class="sidebar_button">Create new contact</p>
+          <div class="sidebar-category">
+            <h1 class="heading-category">General</h1>
+            <p>All Contact</p>
+            <p>Trash</p>
+          </div>
+          <div class="sidebar-category">
+            <h1 class="heading-category">Label</h1>
+            <p>Personal</p>
+            <p>Work</p>
           </div>
         </div>
+        <div class="main-contact-content">
+          <h1 class="main-contact-content_title">All Contact</h1>
+          <table>
+            <thead>
+              <tr>
+                <th>Nama</th>
+                <th>Nomor Telepon</th>
+                <th>Aksi</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>John Doe</td>
+                <td>08123456789</td>
+                <td><button>Edit</button> <button>Delete</button></td>
+              </tr>
+              <tr>
+                <td>Jane Doe</td>
+                <td>08987654321</td>
+                <td><button>Edit</button> <button>Delete</button></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </section>
 
-<!--    <section class="address-book">-->
-<!--      <h1 class="heading-title">Address Book</h1>-->
-<!--      <form class="form-address" id="form-address" action="">-->
-<!--        <label for="name">Name</label>-->
-<!--        <input-->
-<!--          type="text"-->
-<!--          id="name"-->
-<!--          name="name"-->
-<!--          required-->
-<!--          class="input-field"-->
-<!--          placeholder="Input your name"-->
-<!--        />-->
-<!--        <label for="phone">Phone number</label>-->
-<!--        <input-->
-<!--          type="tel"-->
-<!--          id="phone"-->
-<!--          name="phone"-->
-<!--          required-->
-<!--          class="input-field"-->
-<!--          placeholder="Input your number phone"-->
-<!--        />-->
-<!--        <button id="submit-btn" type="submit" class="button-submit">-->
-<!--          Submit-->
-<!--        </button>-->
-<!--      </form>-->
+    <!--    <section class="address-book">-->
+    <!--      <h1 class="heading-title">Address Book</h1>-->
+    <!--      <form class="form-address" id="form-address" action="">-->
+    <!--        <label for="name">Name</label>-->
+    <!--        <input-->
+    <!--          type="text"-->
+    <!--          id="name"-->
+    <!--          name="name"-->
+    <!--          required-->
+    <!--          class="input-field"-->
+    <!--          placeholder="Input your name"-->
+    <!--        />-->
+    <!--        <label for="phone">Phone number</label>-->
+    <!--        <input-->
+    <!--          type="tel"-->
+    <!--          id="phone"-->
+    <!--          name="phone"-->
+    <!--          required-->
+    <!--          class="input-field"-->
+    <!--          placeholder="Input your number phone"-->
+    <!--        />-->
+    <!--        <button id="submit-btn" type="submit" class="button-submit">-->
+    <!--          Submit-->
+    <!--        </button>-->
+    <!--      </form>-->
 
-<!--      <div id="error-message"></div>-->
-<!--    </section>-->
+    <!--      <div id="error-message"></div>-->
+    <!--    </section>-->
     <script src="index.js"></script>
   </body>
 </html>
